--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": ">=7.3",
-    "guzzlehttp/guzzle": "^7.2"
+    "guzzlehttp/guzzle": "^6.5.*"
   },
   "autoload": {
     "psr-4": {
