--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "guzzlehttp/guzzle": "^6.5.*"
+    "php": ">=7.3"
   },
   "autoload": {
     "psr-4": {
